<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- suluhu strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="_10_50_string">10:50</string>
    <string name="suluhu_string">SULUHU</string>
    <string name="security_right_with_you_string">Security right with you</string>
    <string name="report_emergency_string">Report emergency</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="_10_50_ek1_string">10:50</string>
    <string name="welcome__string">Welcome!</string>
    <string name="let_s_get_started_string">Lets get started</string>
    <string name="already_registered__sign_in_string">Already registered? Sign in</string>
    <string name="enter_your_email_string">Enter your email</string>
    <string name="enter_password_string">Enter password</string>
    <string name="confirm_password_string">Confirm password</string>
    <string name="sign_up_ek1_string">Sign Up</string>
    <string name="_10_50_ek2_string">10:50</string>
    <string name="welcome__ek1_string">Welcome!</string>
    <string name="let_s_get_started_ek1_string">Lets get started</string>
    <string name="not_registered__sign_up_string">Not registered? Sign up</string>
    <string name="enter_your_email_ek1_string">Enter your email</string>
    <string name="enter_password_ek1_string">Enter password</string>
    <string name="sign_in_ek3_string">Sign in</string>
    <string name="_10_50_ek3_string">10:50</string>
    <string name="welcome__ek2_string">Welcome!</string>
    <string name="what_s_your_emergency__string">Whats your emergency?</string>
    <string name="generate_automatic_report_string">Generate automatic report</string>
    <string name="_10_50_ek4_string">10:50</string>
    <string name="welcome__ek3_string">Welcome!</string>
    <string name="take_a_pic_string">Take a pic</string>
    <string name="add_media_evidence_string">Add media evidence</string>
    <string name="send_string">Send</string>
    <string name="briefly_explain_the_emergency_string">Briefly explain the emergency</string>
    <string name="_10_50_ek5_string">10:50</string>
    <string name="welcome__ek4_string">Welcome!</string>
    <string name="take_a_pic_ek1_string">Take a pic</string>
    <string name="add_media_evidence_ek1_string">Add media evidence</string>
    <string name="send_ek1_string">Send</string>
    <string name="briefly_explain_the_emergency_ek1_string">Briefly explain the emergency</string>
    <string name="this_report_page_is_completely_anonymous_string">This report page is completely anonymous</string>
    <string name="signupbtn">signupbtn</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="capture_pic">Capture pic</string>
    <string name="record_video">Record video</string>
    <string name="opengallery">openGallery</string>
    <string name="open_gallery">open gallery</string>
    <string name="add_doc">add doc</string>
    <string name="add_vid">add vid</string>
    <string name="this_report_page_is_completely_anonymous">This report page is completely anonymous!</string>
    <string name="select_doc">select doc</string>
    <string name="upload_doc">upload doc</string>
    <string name="upload_video">upload video</string>
    <string name="choose_video">choose video</string>
    <string name="save_description">Save description</string>
    <string name="enter_your_email_forgot">Enter your email</string>
    <string name="enter_your_username">enter your username</string>
    <string name="enter_your_full_names">enter your full names</string>
    <string name="share_live_location">share live location</string>
    <string name="Share_live_location">Share_live_location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="share_live_locationFinal">Share live location</string>
    <string name="add_media_below">Add media below</string>
    <string name="share_live_locationfinalf">Share live location</string>
</resources>