<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="match_parent" >
	<!--
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc
	 *	@file 		suluhu
	 *	@date 		1635510692890
	 *	@title 		Page 1
	 *	@author
	 *	@keywords
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->


	<TextView
		android:id="@+id/forgot_password"
		android:layout_width="121dp"
		android:layout_height="25dp"
		android:layout_marginStart="124dp"
		android:layout_marginBottom="16dp"
		android:text="@string/forgot_password"
		android:textAllCaps="false"
		android:textColor="@color/_10_50_color"
		android:textSize="13sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/Sign_in"
		app:layout_constraintVertical_bias="0.191" />

	<TextView
		android:id="@+id/not_registered_sign_up"
		android:layout_width="190dp"
		android:layout_height="29.5dp"
		android:layout_marginStart="116dp"
		android:layout_marginBottom="16dp"
		android:text="@string/not_registered__sign_up_string"
		android:textAllCaps="false"
		android:textColor="@color/_10_50_color"
		android:textSize="13sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/Sign_in"
		app:layout_constraintVertical_bias="0.835" />

	<Button
		android:id="@+id/Sign_in"
		android:layout_width="352dp"
		android:layout_height="59dp"
		android:layout_marginTop="24dp"
		android:background="#C0F4C9"
		android:text="@string/sign_in_ek3_string"
		android:textAllCaps="false"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.491"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/enter_password_login">

	</Button>

	<TextView
		android:id="@+id/welcome__ek3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:text="@string/enter_your_details"
		android:textColor="@color/_10_50_color"
		android:textSize="13sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/enter_your_email_login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/welcome__ek"
		app:layout_constraintVertical_bias="0.0" />

	<TextView
		android:id="@+id/welcome__ek"
		android:layout_width="80dp"
		android:layout_height="29.5dp"
		android:layout_marginTop="184dp"
		android:text="@string/welcome__ek2_string"
		android:textColor="@color/_10_50_color"
		android:textSize="13sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/enter_your_email_login"
		android:layout_width="352dp"
		android:layout_height="59dp"
		android:layout_marginTop="352dp"
		android:background="#F0F6F1"
		android:hint="@string/enter_your_email"
		android:inputType="textEmailAddress"
		android:textAllCaps="false"
		app:layout_constraintBottom_toTopOf="@+id/enter_password_login"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.508"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.312">

	</EditText>

	<EditText
		android:id="@+id/enter_password_login"
		android:layout_width="352dp"
		android:layout_height="59dp"
		android:background="#F0F6F1"
		android:hint="@string/enter_your_password"
		android:inputType="textPassword"
		android:textAllCaps="false"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.706">

	</EditText>

	<View
		android:id="@+id/ellipse_1_ek1"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:alpha="0.40999999642372"
		android:background="@drawable/ellipse_1_ek1_shape"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginStart="-67dp"
		android:layout_marginTop="-30dp"
		app:layout_constraintVertical_bias="0.0" />

	<View
		android:id="@+id/ellipse_2_ek1"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_marginStart="-67dp"
		android:layout_marginTop="-90dp"
		android:alpha="0.40999999642372"
		android:background="@drawable/ellipse_1_ek1_shape"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.563"
		app:layout_constraintStart_toStartOf="@+id/ellipse_1_ek1"
		app:layout_constraintTop_toTopOf="parent" />

	<ProgressBar
		android:id="@+id/progressBar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:elevation="8dp"
		/>


</androidx.constraintlayout.widget.ConstraintLayout>