<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="match_parent" >



	<Button
		android:id="@+id/whats_your_emergency"
		android:layout_width="339dp"
		android:layout_height="70dp"
		android:layout_marginTop="352dp"
		android:background="#C0F4C9"
		android:text="@string/what_s_your_emergency__string"
		android:textAllCaps="false"
		app:layout_constraintBottom_toTopOf="@+id/Generate_automatic_report"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.313">

	</Button>

	<Button
		android:id="@+id/Generate_automatic_report"
		android:layout_width="339dp"
		android:layout_height="70dp"
		android:background="#C0F4C9"
		android:text="@string/generate_automatic_report_string"
		android:textAllCaps="false"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.812">

	</Button>

	<TextView
		android:id="@+id/welcome__ek2"
		android:layout_width="80dp"
		android:layout_height="29.5dp"
		android:layout_marginStart="70dp"
		android:layout_marginTop="36dp"
		android:text="@string/welcome__ek2_string"
		android:textColor="@color/_10_50_color"
		android:textSize="13sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toEndOf="@+id/ellipse_2_ek1"
		app:layout_constraintTop_toTopOf="parent" />

	<View
		android:id="@+id/ellipse_1_ek1"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:alpha="0.40999999642372"
		android:background="@drawable/ellipse_1_ek1_shape"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginStart="-67dp"
		android:layout_marginTop="-30dp"
		app:layout_constraintVertical_bias="0.0" />

	<View
		android:id="@+id/ellipse_2_ek1"
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_marginStart="-67dp"
		android:layout_marginTop="-90dp"
		android:alpha="0.40999999642372"
		android:background="@drawable/ellipse_1_ek1_shape"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.563"
		app:layout_constraintStart_toStartOf="@+id/ellipse_1_ek1"
		app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>